# remote

./: .gitignore  CMakeLists.txt  README.md  common.h  common.h.in  config.ini  debpackaging.cmake  installing.cmake  kuznechik.cpp  kuznechik.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rd_management.pro  remote_control.cpp  remote_control.h  remote_control.ui  remote_management.cpp  remote_management.h  remote_management.ui
